--- a/src/public/mix-manifest.json
+++ b/src/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/favorite.js": "/js/favorite.js",
+    "/js/reserve.js": "/js/reserve.js",
     "/css/app.css": "/css/app.css"
 }
