--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - ./src/:/var/www/html
 
   db:
+    container_name: ${DB_HOST}
     build:
       context: .
       dockerfile: ./docker/mysql/Dockerfile
@@ -45,15 +46,3 @@ services:
     volumes:
       - mysql-volume:/var/lib/mysql
 
-  db-test:
-    build:
-      context: .
-      dockerfile: ./docker/mysql/Dockerfile
-    ports:
-      - ${DB_PORT_TEST}:3306
-    environment:
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      TZ: 'Asia/Tokyo'
