--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,6 +31,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: path check
+        run: pwd
       - name: cache vendor
         id: cache
         uses: actions/cache@v1
