--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,6 +33,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: path check
         run: pwd
+      - name: path check
+        run: ls -a
       - name: cache vendor
         id: cache
         uses: actions/cache@v1
