--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -46,6 +46,7 @@ jobs:
       - name: composer install
         if: steps.cache.outputs.cache-hit != 'true'
         run: composer install -n --prefer-dist
+        working-directory: ./src
       - name: composer dump autoload
         run: composer dump-autoload
       - name: generate key
