--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -48,6 +48,7 @@ jobs:
         working-directory: ./src
       - name: cache clear
         run: php artisan config:clear
+        working-directory: ./src
       - name: generate key
         run: php artisan key:generate --env=testing
         working-directory: ./src
