--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -53,7 +53,7 @@ jobs:
         run: php artisan key:generate --env=testing
         working-directory: ./src
       - name: migrate
-        run: php artisan migrate
+        run: php artisan migrate --force
         working-directory: ./src
       - name: unit test
         run: ./vendor/bin/phpunit
