--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -52,8 +52,8 @@ jobs:
       - name: generate key
         run: php artisan key:generate --env=testing
         working-directory: ./src
-      - name: migrate
-        run: php artisan migrate --no-interaction 
-        working-directory: ./src
+      # - name: migrate
+      #   run: php artisan migrate --no-interaction 
+      #   working-directory: ./src
       - name: unit test
         run: ./vendor/bin/phpunit
