--- a/src/.env.testing
+++ b/src/.env.testing
@@ -2,3 +2,9 @@ APP_ENV=testing
 APP_KEY=
 APP_URL=http://localhost
 DB_CONNECTION=mysql
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=3u2TnJpMg6yk+Lh/hoCS7q7nMFBelBEwoLLxYzgw
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=rese-restaurant
+AWS_USE_PATH_STYLE_ENDPOINT=false
