--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -46,12 +46,21 @@ jobs:
       - name: composer dump autoload
         run: composer dump-autoload
         working-directory: ./src
+      - name: Copy .env
+        run: cp .env.testing .env
       - name: cache clear
         run: php artisan config:clear
         working-directory: ./src
       - name: generate key
-        run: php artisan key:generate --env=testing
+        run: php artisan key:generate
         working-directory: ./src
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+        aws_bucket: ${{ secrets.AWS_BUCKET }}
       # - name: migrate
       #   run: php artisan migrate --no-interaction 
       #   working-directory: ./src
