--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -59,7 +59,8 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-1
+        aws-region: us-east-1
+        aws_bucket: ${{ secrets.AWS_BUCKET }}
       # - name: migrate
       #   run: php artisan migrate --no-interaction 
       #   working-directory: ./src
