--- a/src/.env.unittest
+++ b/src/.env.unittest
@@ -2,4 +2,6 @@ APP_NAME=Laravel
 APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
+AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=rese-restaurant
+AWS_USE_PATH_STYLE_ENDPOINT=false
