--- a/src/Procfile
+++ b/src/Procfile
@@ -1,2 +1,2 @@
-release: php artisan migrate:fresh --seed
+release: php artisan migrate --force && php artisan db:seed --force
 web: vendor/bin/heroku-php-apache2 public/
